--- a/presentations/index.html
+++ b/presentations/index.html
@@ -3,6 +3,7 @@
 <ul>
 	<li>2018</li>
 	<ul>
+		<li><a href="./KVM-Forum-2018/">KVM Forum 2018 - VFIO Device Assignment Quirks How to Use Them and How to Avoid Them</a></li>
 		<li><a href="./LinuxCon-Beijing-2018/">LinuxCon Beijing 2018 - VFIO Device Assignment Quirks, and how to avoid them in your hardware</a></li>
 	</ul>
 	<li>2016</li>
